--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
   "dependencies": {
     "next": "10.0.8",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "remark-parse": "^9.0.0",
+    "remark-react": "^8.0.0",
+    "sass": "^1.32.8",
+    "unified": "^9.2.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.34",
+    "@types/react": "^17.0.3",
+    "typescript": "^4.2.3"
   }
 }
